Update 1 sector, etc

--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
 			<div class="flexbox-container">
 				<div class="flexbox-box greenBG">
 					<h2>Right now working on:</h2>
-					<img src="images/cacoanim2.gif" alt="el gobierno gobierna" class="imagen_small">
-					<ul>
-						<li>
-							<h3>A map for the 1sector community project.</h3>
-						</li>
-					</ul>
+					<img src="images/xd/perturbado1.webp" alt="perturbado uno dot webp" class="imagen_small">
+					<h3>Real Life</h3>
 				</div>
 				<div class="flexbox-box greenBG">
 					<h2>NEWS:</h2>	
+					
+					<h3>14/8/2024: Published my map for 1 Sector Community Project</h3>
+					<p>
+						<a href="https://www.doomworld.com/forum/post/2834134">Doomworld Post</a>
+					</p>
+
+					<hr>
+
 					<h3>3/3/2024: IMPSCAPE is out! Go play it! → → →</h3>
 					<div>
 						<a href="https://urrova.itch.io/impscape">
