--- a/index_es.html
+++ b/index_es.html
@@ -31,15 +31,19 @@
 			<div class="flexbox-container">
 				<div class="flexbox-box greenBG">
 					<h2>Ahora mismo trabajando en:</h2>
-					<img src="images/cacoanim2.gif" alt="el gobierno gobierna" class="imagen_small">
-					<ul>
-						<li>
-							<h3>Un mapa para el community project 1sector.</h3>
-						</li>
-					</ul>
+					<img src="images/xd/perturbado1.webp" alt="perturbado uno dot webp" class="imagen_small">
+					<h3>Vida Real</h3>
 				</div>
 				<div class="flexbox-box greenBG">
 					<h2>NEWS:</h2>	
+
+					<h3>14/8/2024: Publique mi mapa para 1 Sector Community Project</h3>
+					<p>
+						<a href="https://www.doomworld.com/forum/post/2834134">Post de Doomworld</a>
+					</p>
+
+					<hr>
+
 					<h3>3/3/2024: IMPSCAPE esta publicado! Vayan a jugarlo! → → →</h3>
 					<div>
 						<a href="https://urrova.itch.io/impscape">
