--- a/mods.html
+++ b/mods.html
@@ -39,7 +39,7 @@
 
 			<div class="center">
 				<p>I like FPS games from the year of the fart lol.</p>
-				<p>This can look like a doom mod showcase, in reality this is a documentary about how doom ruined my life.</p>
+				<p>This can look like a doom mod showcase, in reality this is a documentary about how doom ruined my life. If you want to ruin your own: <a href="https://freedoom.github.io/">download freedoom</a>.</p>
 				<br>
 			</div>
 
@@ -360,7 +360,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-							<img src="https://static.doomworld.com/monthly_2024_05/image.png.27c035d005a94b6b32d7cedf3bdbcb86.png" class="imagen borde">
+							<img src="https://github.com/Urrova/images/blob/master/1sector/doom64.png?raw=true" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
@@ -371,11 +371,9 @@
 								1 floor and 1 ceiling. <br>
 							</p>
 
-							<p>I made (am making) MAP17, a map that is a giant scrolling sector.</p>
+							<p>I made MAP17, a map that is a giant scrolling sector.</p>
 
-							<p>This is my second doom error. I joined the project willing to have some fun and make something instead of real life;
-								didnt remembered i was that burned out. I did it extremely tired; i just should have stopped doing doom maps at all lol.
-							</p>
+							<p>This is my last doom map. Unfortunately my Doom phase ended long ago, so im not going to doom until a looooong time.</p>
 
 							<p><span class="text_yellow">THE WAD IS STILL IN DEVELOPMENT</span>. No download available right now.</p>
 
