--- a/mods_es.html
+++ b/mods_es.html
@@ -39,7 +39,7 @@
 			
 			<div class="center">
 				<p>Me gustan los juegos FPS del año del pedo lol.</p>
-				<p>Esto puede parecer una pagina de mods de doom, en realidad es un documental de como doom arruino mi vida. No hagan lo mismo que yo.</p>
+				<p>Esto puede parecer una pagina de mods de doom, en realidad es un documental de como doom arruino mi vida. Si queres arruinar la tuya: <a href="https://freedoom.github.io/">descargar freedoom</a>.</p>
 				<br>
 			</div>
 
@@ -364,7 +364,7 @@
 				<br>
 				<div class="flexbox-container">
 					<div class="flexbox-box-article-left">
-							<img src="https://static.doomworld.com/monthly_2024_05/image.png.27c035d005a94b6b32d7cedf3bdbcb86.png" class="imagen borde">
+							<img src="https://github.com/Urrova/images/blob/master/1sector/doom64.png?raw=true" class="imagen borde">
 					</div>
 
 					<div class="flexbox-box-article-right">
@@ -375,11 +375,9 @@
 								con un solo piso y un solo techo. <br>
 							</p>
 
-							<p>Yo desarrolle (estoy desarrollando) MAP17, un mapa que es un sector scroller gigante.</p>
+							<p>Yo desarrolle MAP17, un mapa que es un sector scroller gigante.</p>
 
-							<p>Este es mi segundo error de doom. Me uni al proyecto para tener un poco de diversion y hacer otra cosa que la vida real;
-								no me acordaba que estaba tan cansado. Lo hice estando extremadamente cansado; Ya debi haber dejado de hacer mapas en ese entonces.
-							</p>
+							<p>Este es mi ultimo mapa para Doom. Desgraciadamente mi etapa Doom termino hace rato, asi que no voy a volver a hacer mods para Doom hasta dentro de un rato laaaaargo.</p>
 
 							<p><span class="text_yellow">EL WAD SIGUE EN DESARROLLO</span>. No hay descarga disponible ahora mismo</p>
 
