Algunas modificaciones pequeñas al sitio, debo rehacerlo alguna vez, tal vez React o que se yo

--- a/aboutme.html
+++ b/aboutme.html
@@ -63,7 +63,8 @@
 					making mods for a game, it isnt your life project, dont put 2 years or something to your wad,
 					you dont need to make the 32 maps megawad with 25000 ZScript lines to being valorated.<br>
 					If you want to do a doom masterpiece, dont go alone. Dont be like me and join community projects. Masterpieces are done by groups of many people. <br>
-					Now i have <span class="text_glitchy">DOOM BURNOUT</span>, so i dont develop any more individal mods. <br>I will sometimes do maps for community projects, but i will not make anything too big again, not for doom.<br>
+					Now i have <span class="text_glitchy">DOOM BURNOUT</span>, so i dont develop any more individal mods. <br>
+					<del>I will sometimes do maps for community projects</del> Nope, enough doom for me.<br>
 				</p>
 
 				<p>
@@ -74,12 +75,21 @@
 				</p>
 
 				<p>
-					<b>MUSICA</b> <br>
+					<b>MUSIC</b> <br>
 					I also make music, dragging squares and drawing forms and rotationg knobs in computer programs.<br>
 					I make rock and electronic music, sometimes stand alone and sometimes as a soundtrack for a bigger project<br>
-					Sometimes i make MIDIs for collab doom projects
+					Sometimes i make MIDIs for collab doom projects.
 					(<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">NEGATIVEONE</a>;
-					<a href="https://www.doomworld.com/forum/topic/141857-amalgoom-episode-1-the-red-valley-of-death-is-finally-here/">Alamgoom</a>). <br>
+					<a href="https://www.doomworld.com/forum/topic/141857-amalgoom-episode-1-the-red-valley-of-death-is-finally-here/">Alamgoom</a>). <br><br>
+					Some music i like:
+					<ul>
+						<li>Cuarteto de Nos</li>
+						<li>Dream Theater; Symphony X; Michael Romeo; King Crimson; TesseracT and other prog rock/metal bands.</li>
+						<li>Calle 13</li>
+						<li>Camellia; Xtrullor; PERTURBATOR; Carpenter Brut and other heavy electronic music.</li>
+						<li>Dragonforce; Stratovarius and other power metal bands.</li>
+						<li>Videogame music (Touhou, Hotline Miami, etc)</li>
+					</ul>
 				</p>
 
 				<h3>Frequently Asked Questions</h3>
