--- a/html_modules/footer.html
+++ b/html_modules/footer.html
@@ -1,6 +1,5 @@
 <center class = "Footer">
-    <p class="SmallP">Visit counter:</p>
-    <div id="Counter_loader"></div>
+    <p class="SmallP">Visit counter: <div id="Counter_loader"></div></p>
     <script>
         var pageurl = window.location.href.split("://")[1];
         var counter = document.getElementById("Counter_loader");
@@ -16,4 +15,8 @@
             counter.innerHTML = "<p class='SmallP'>Contador deshabilitado por si no esta subido</p>"
         }
     </script>
+
+    <br>
+    <img src="images/buttons/doombut.gif" alt="" srcset="">
+    <img src="images/buttons/touhouproject.gif" alt="" srcset="">
 </center>
