--- a/html_modules/navbar.html
+++ b/html_modules/navbar.html
@@ -3,8 +3,8 @@
 		<h1>Urrova's website</h1>
 	</div>
 	<div id="navbar_title_desktop">
-		<h1 id="navbar_title_main">Urrova's website</h1>
-		<p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p>
+		<h1 id="navbar_title_main">URROVA's website</h1>
+		<!--p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p-->
 	</div>
 	<marquee id="Navbar_marquee">I DONT KNOW HOW TO PROGRAM</marquee>
 	<hr>
