--- a/html_modules/navbar_es.html
+++ b/html_modules/navbar_es.html
@@ -1,10 +1,10 @@
 <center class="Navbar">
 	<div id = "navbar_title_mobile">
-		<h1>Urrova's website</h1>
+		<h1>URROVA's website</h1>
 	</div>
 	<div id="navbar_title_desktop">
 		<h1 id="navbar_title_main">Urrova's website</h1>
-		<p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p>
+		<!--p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p-->
 	</div>
 	<marquee id="Navbar_marquee">NO SE PROGRAMAR</marquee>
 	<hr>
