--- a/mods.html
+++ b/mods.html
@@ -39,7 +39,7 @@
 
 			<div class="center">
 				<p>I like FPS games from the year of the fart lol.</p>
-				<p>This can look like a doom mod showcase, in reality this is a documentary about how doom ruined my life. If you want to ruin your own: <a href="https://freedoom.github.io/">download freedoom</a>.</p>
+				<p>This can look like a Doom mod showcase, in reality this is a documentary about how Doom ruined my mental sanity. If you want to ruin your own: <a href="https://freedoom.github.io/">download freedoom</a>.</p>
 				<br>
 			</div>
 
@@ -421,12 +421,18 @@
 							</p>
 
 							<p class="center">
-								<a href="https://www.doomworld.com/forum/topic/115781-doom-1-a-doomworld-experiment">Original version development thread</a> | 
+								<a href="https://www.doomworld.com/forum/topic/115781-doom-1-a-doomworld-experiment">Original version development thread</a>
+							</p>
+							
+							<p class="center">
 								<a href="https://www.doomworld.com/forum/topic/117325-doom-1-the-final-release/">Original version release thread</a>
 							</p>
 						
 							<p class="center">
-								<a href="https://www.doomworld.com/forum/topic/117348-doom-1-complete-the-bugfix-thread/">Bugfix version development thread</a> | 
+								<a href="https://www.doomworld.com/forum/topic/117348-doom-1-complete-the-bugfix-thread/">Bugfix version development thread</a>
+							</p>
+
+							<p class="center">
 								<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">Bugfix version release thread</a>
 							</p>
 						</div></div>
