--- a/mods_es.html
+++ b/mods_es.html
@@ -39,7 +39,7 @@
 			
 			<div class="center">
 				<p>Me gustan los juegos FPS del año del pedo lol.</p>
-				<p>Esto puede parecer una pagina de mods de doom, en realidad es un documental de como doom arruino mi vida. Si queres arruinar la tuya: <a href="https://freedoom.github.io/">descargar freedoom</a>.</p>
+				<p>Esto puede parecer una pagina de mods de Doom, en realidad es un documental de como Doom arruino mi salud mental. Si queres arruinar la tuya: <a href="https://freedoom.github.io/">descargar freedoom</a>.</p>
 				<br>
 			</div>
 
@@ -425,12 +425,18 @@
 							</p>
 
 							<p class="center">
-								<a href="https://www.doomworld.com/forum/topic/115781-doom-1-a-doomworld-experiment">Hilo de desarrollo de la version original</a> | 
+								<a href="https://www.doomworld.com/forum/topic/115781-doom-1-a-doomworld-experiment">Hilo de desarrollo de la version original</a>
+							</p>
+
+							<p class="center">
 								<a href="https://www.doomworld.com/forum/topic/117325-doom-1-the-final-release/">Hilo de publicacion de la version original</a>
 							</p>
 						
 							<p class="center">
-								<a href="https://www.doomworld.com/forum/topic/117348-doom-1-complete-the-bugfix-thread/">Hilo de desarrollo de la version bugfix</a> | 
+								<a href="https://www.doomworld.com/forum/topic/117348-doom-1-complete-the-bugfix-thread/">Hilo de desarrollo de la version bugfix</a>
+							</p>
+							 	
+							<p class="center">
 								<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">Hilo de publicacion de la version bugfix</a>
 							</p>
 
