--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -65,7 +65,8 @@
 					y de vida o muerte hacer mods para un juego, no le pongan 2 años a un solo wad, no necesitan hacer el megawad
 					de 32 mapas con 25000 lineas de ZScript para ser valorados. <br>
 					Si quieren hacer una obra maestra del doom, no la hagan solos. No sean como yo y unanse a community projects. Las obras maestras se hacen de a muchos. <br>
-					Ahora estoy <span class="text_glitchy">COMPLETAMENTE CANSADO DEL DOOM</span> asi que, no creo que siga sacando mas mods individuales. <br>Cada tanto voy a hacer algun mapa para algun community project pero no voy a hacer otras cosas demasiado grandes, no para doom.<br>
+					Ahora estoy <span class="text_glitchy">COMPLETAMENTE CANSADO DEL DOOM</span> asi que, no creo que siga sacando mas mods individuales. <br>
+					<del>Cada tanto voy a hacer algun mapa para algun community project</del> No, suficiente doom para mi.<br>
 				</p>
 
 				<p>
@@ -83,7 +84,16 @@
 					Compongo temas de rock y electronica, a veces stand alone y a veces como banda sonora de otro proyecto mas grande.<br>
 					Casi siempre uso archivos de audio, aunque a veces hago MIDIs para proyectos de doom colaborativos 
 					(<a href="https://www.doomworld.com/forum/topic/128549-doom-1-negative-one-beyond-the-experiment-release-thread/">NEGATIVEONE</a>;
-					<a href="https://www.doomworld.com/forum/topic/141857-amalgoom-episode-1-the-red-valley-of-death-is-finally-here/">Alamgoom</a>). <br>
+					<a href="https://www.doomworld.com/forum/topic/141857-amalgoom-episode-1-the-red-valley-of-death-is-finally-here/">Alamgoom</a>). <br><br>
+					Alguna musica que me gusta:
+					<ul>
+						<li>Cuarteto de Nos</li>
+						<li>Dream Theater; Symphony X; Michael Romeo; King Crimson; TesseracT and other prog rock/metal bands.</li>
+						<li>Calle 13</li>
+						<li>Camellia; Xtrullor; PERTURBATOR; Carpenter Brut and other heavy electronic music.</li>
+						<li>Dragonforce; Stratovarius and other power metal bands.</li>
+						<li>Videogame music (Touhou, Hotline Miami, etc)</li>
+					</ul>
 				</p>
 
 				<h3>Preguntas frecuentes</h3>
