--- a/html_modules/footer.html
+++ b/html_modules/footer.html
@@ -1,5 +1,6 @@
 <center class = "Footer">
-    <p class="SmallP">Visit counter: <div id="Counter_loader"></div></p>
+    <p>
+    <span id="Counter_loader"></span>
     <script>
         var pageurl = window.location.href.split("://")[1];
         var counter = document.getElementById("Counter_loader");
@@ -9,14 +10,14 @@
                                     pageurl+
                                     '"><img alt="Hits" src="https://hits.sh/'+
                                     pageurl+
-                                    '.svg?color=00ffff&labelColor=000000&logo=godotengine"/></a>';
+                                    '.svg?color=00ffff&labelColor=000000&logo=godotengine&style=for-the-badge"/></a>';
         }
         else{
             counter.innerHTML = "<p class='SmallP'>Contador deshabilitado por si no esta subido</p>"
         }
     </script>
 
-    <br>
     <img src="images/buttons/doombut.gif" alt="" srcset="">
     <img src="images/buttons/touhouproject.gif" alt="" srcset="">
+    </p>
 </center>
