Agregado un blog hecho a base de RSS. Actualizados los mods (salio Amalgoom y 1 Sector Community Project)

--- a/html_modules/footer_es.html
+++ b/html_modules/footer_es.html
@@ -12,7 +12,8 @@
                                     '.svg?color=00ffff&labelColor=000000&logo=godotengine&style=for-the-badge"/></a>';
         }
         else{
-            counter.innerHTML = "<p class='SmallP'>Contador deshabilitado por si no esta subido</p>"
+            //counter.innerHTML = "<p class='SmallP'>Contador deshabilitado por si no esta subido</p>"
+            counter.innerHTML = ""
         }
     </script>
 
