--- a/html_modules/navbar.html
+++ b/html_modules/navbar.html
@@ -7,9 +7,11 @@
 		<!--p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p-->
 	</div>
 	<marquee id="Navbar_marquee">I DONT KNOW HOW TO PROGRAM</marquee>
-	<hr>
+	<hr></hr>
 	<ul class="Navbar_Buttons_Desktop">
 		<li><a href="index.html" target="_parent">Home</a></li>
+		<li>∙</li>
+		<li><a href="blog.html" target="_parent">Blog</a></li>
 		<li>∙</li>
 		<!-- <li><a href="vgames.html" target="_parent">Videogames</a></li> 
 		<li>∙</li>-->
