--- a/html_modules/navbar_es.html
+++ b/html_modules/navbar_es.html
@@ -11,6 +11,8 @@
 	<ul class="Navbar_Buttons_Desktop">
 		<li><a href="index_es.html" target="_parent">Inicio</a></li>
 		<li>∙</li>
+		<li><a href="blog_es.html" target="_parent">Blog</a></li>
+		<li>∙</li>
 		<!-- <li><a href="vgames_es.html" target="_parent">Videojuegos</a></li> 
 		<li>∙</li>-->
 		<li><a href="mods_es.html" target="_parent">Mods</a></li>
