--- a/mods.html
+++ b/mods.html
@@ -14,7 +14,6 @@
 		<meta property="og:url" content="https://urrova.github.io/mods.html"/>
 		<meta property="og:description" content="URROVA's website. Mods page, where are all the mods made by me.\nDoom mods: Dimensional weirdness, FURDEMON, UAC Arena, Negative one, etc.">
 		<meta property="og:site_name" content="URROVA's website.">
-		<script src="js/zepto v1.2.0.js"></script>
 	</head>
 	<body>
 			<!-- Barra de navegacion -->
@@ -338,10 +337,14 @@
 							I collaborated to this project with 4 MIDI songs (2 main and 2 B-Sides)
 							</p>
 
-							<p><span class="text_yellow">THE WAD IS STILL IN DEVELOPMENT</span>. You can download the first episode from the button below.</p>
+							<p><span class="text_green">THE PROJECT IS FINALLY RELEASED!! GO DOWNLOAD IT!!</span>. You can download the first episode from the button below.</p>
 
 							<p class="center">
-								<a href="https://drive.google.com/file/d/1_Izqbe56b0qshvtSY1ELGZSbBZUEVlRz/view?usp=sharing" class="button">Download the first episode</a>
+								<a href="https://drive.google.com/file/d/15e66GQFdNM8wI_OKJ3o7H_b5HYBQwu6f/view?usp=drive_link" class="button">Download</a>
+							</p>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/152974-amalgoom-rc1-sandy-petersen-interview/">Doomworld Release Thread</a>
 							</p>
 
 							<p class="center">
@@ -349,7 +352,7 @@
 							</p>
 			
 						</div></div>
-							<br>
+						<br>
 					</div>
 				</div>
 			</article>
@@ -375,10 +378,10 @@
 
 							<p>This is my last doom map. Unfortunately my Doom phase ended long ago, so im not going to doom until a looooong time.</p>
 
-							<p><span class="text_yellow">THE WAD IS STILL IN DEVELOPMENT</span>. No download available right now.</p>
+							<p><span class="text_green">THE WAD IS RELEASED</span>. Go download it!</p>
 
 							<p class="center">
-								<a href="https://urrova.github.io/404.html" class="button">(dont) Download</a>
+								<a href="https://www.doomworld.com/forum/topic/151953-1-sector-community-project-rc2/?tab=comments#comment-2909398" class="button">Download</a>
 							</p>
 
 							<p class="center">
