--- a/mods_es.html
+++ b/mods_es.html
@@ -14,7 +14,6 @@
 		<meta property="og:url" content="https://urrova.github.io/mods.html"/>
 		<meta property="og:description" content="URROVA's website. Mods page, where are all the mods made by me.\nDoom mods: Dimensional weirdness, FURDEMON, UAC Arena, Negative one, etc.">
 		<meta property="og:site_name" content="URROVA's website.">
-		<script src="js/zepto v1.2.0.js"></script>
 	</head>
 	<body>
 			<!-- Barra de navegacion -->
@@ -342,10 +341,14 @@
 							Colabore a este proyecto con 4 MIDIs (2 principales y 2 B-Sides)
 							</p>
 
-							<p><span class="text_yellow">EL WAD SIGUE EN DESARROLLO</span>. Podes descargar el primer episodio desde el boton abajo.</p>
+							<p><span class="text_yellow">EL PROYECTO FINALMENTE SALIO!! JUEGUENLOOOOOOOOOO</p>
 
 							<p class="center">
-								<a href="https://drive.google.com/file/d/1_Izqbe56b0qshvtSY1ELGZSbBZUEVlRz/view?usp=sharing" class="button">Descargar el primer episodio</a>
+								<a href="https://drive.google.com/file/d/15e66GQFdNM8wI_OKJ3o7H_b5HYBQwu6f/view?usp=drive_link" class="button">Descargar</a>
+							</p>
+
+							<p class="center">
+								<a href="https://www.doomworld.com/forum/topic/152974-amalgoom-rc1-sandy-petersen-interview/">Hilo de publicacion en Doomworld</a>
 							</p>
 
 							<p class="center">
@@ -379,10 +382,10 @@
 
 							<p>Este es mi ultimo mapa para Doom. Desgraciadamente mi etapa Doom termino hace rato, asi que no voy a volver a hacer mods para Doom hasta dentro de un rato laaaaargo.</p>
 
-							<p><span class="text_yellow">EL WAD SIGUE EN DESARROLLO</span>. No hay descarga disponible ahora mismo</p>
+							<p><span class="text_green">EL WAD FINALMENTE SE PUBLICO</span>. Jueguenloooooooooo</p>
 
 							<p class="center">
-								<a href="https://urrova.github.io/404.html" class="button">(no) Descargar</a>
+								<a href="https://www.doomworld.com/forum/topic/151953-1-sector-community-project-rc2/?tab=comments#comment-2909398" class="button">Descargar</a>
 							</p>
 
 							<p class="center">
