--- a/music_es.html
+++ b/music_es.html
@@ -14,7 +14,6 @@
 		<meta property="og:url" content="https://urrova.github.io/music_es.html"/>
 		<meta property="og:description" content="Sitio web de URROVA. Pagina de musica, con todos los temas/soundtracks que hice. Disfruten :) (no los estoy poniendo en una lista, son un monton xD)">
 		<meta property="og:site_name" content="Sitio web de URROVA.">
-		<script src="js/zepto v1.2.0.js"></script>
 	</head>
 	<body>
 			<!-- Barra de navegacion -->
@@ -174,11 +173,28 @@
 						</p>
 					</li>
 				</ul>
-
 				
 				<br>
 			</details>
 			
+			<details class="details_article">
+				<summary><h2 class="displayInline">Misc.</h2></summary>
+
+				<p>
+					Esta es musica completamente random que hice por diversion, sin ningun proyecto o direccion en la mente.
+				</p>
+
+				<h3>Pizza y Pasta en Italia</h3>
+
+				<audio controls>
+					<source src="audio/Pizza_y_Pasta_en_Italia.mp3", type="audio/mpeg">
+				</audio>
+
+				<p>
+					Un tema que hice para hacer algo con OpenUTAU usando el patch de Kasane Teto, y salio esta huevada (italianos por favor no me peguen).
+				</p>
+			</details>
+
 			<br>
 
 			<div class="center">
