--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,7 @@
 
 		<h1>News</h1>
 		<p class="center">A section where i post what i make, when i remember to do it ...</p>
+		<p class="center">To suscribe you can use <a href="rss.xml">this link</a>.</p>
 		<br><hr><br>
 
 		<div id="content"></div>
