--- a/blog_es.html
+++ b/blog_es.html
@@ -23,6 +23,7 @@
 
 		<h1>Noticias</h1>
 		<p class="center">Una seccion donde posteo lo que hago, siempre que me acuerde ...</p>
+		<p class="center">Para suscribirte podes usar <a href="rss.xml">este link</a>.</p>
 		<br><hr><br>
 		
 		
