--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
 				</div>
 				<div class="flexbox-box greenBG">
 					<h2>NEWS:</h2>	
+
+					<h3>9/5/2025: Amalgoom was published!! Go play it → → →</h3>
+					<!--div>
+						<a href="https://www.doomworld.com/forum/topic/152974-amalgoom-rc2-sandy-petersen-interview-premiere-05172025">
+						<img src="https://static.doomworld.com/monthly_2024_03/Amalgoombig.png.4f003fa34b4130eb76cda4376a2e20a5.png" alt="Amalgoom Cover" class="imagen_small borde">
+						</a>
+					</div-->
+					<p>
+						<a href="https://www.doomworld.com/forum/topic/152974-amalgoom-rc2-sandy-petersen-interview-premiere-05172025">Doomworld Thread</a>
+					</p>
+
+					<hr>
 					
 					<h3>14/8/2024: Published my map for 1 Sector Community Project</h3>
 					<p>
