--- a/music.html
+++ b/music.html
@@ -134,7 +134,8 @@
 						<p>
 							<b>(B-Side) Facing the Opening to Hell</b> - 30/11/2023<br>
 							(Facing the Spider from Doom + Opening to Hell from Doom 2) <br>
-							Moved to b-sides because Lee Jackson, but whatever.<br><br>
+							This MIDI has a story because it was going to be the Original A-Side MAP30 song buuuut... THEN LITERALLY LEE JACKSON STOLE **MY** SLOT LOL.<br>
+							And mine was moved to the B-Sides... But whatever. The world is fair like this.<br><br>
 
 							<audio controls>
 								<source src="audio/Facing_the_Opening_to_Hell.mp3", type="audio/mpeg">
