--- a/music_es.html
+++ b/music_es.html
@@ -134,7 +134,8 @@
 						<p>
 							<b>(B-Side) Facing the Opening to Hell</b> - 30/11/2023<br>
 							(Facing the Spider del Doom + Opening to Hell del Doom 2) <br>
-							Lo movieron a los b-sides por Lee Jackson pero ya fue.<br><br>
+							Este MIDI tiene una historia, porque iba a ser el tema ORIGINAL en los A-Sides de MAP30 peeeero... LUEGO LITERALMENTE LEE JACKSON ME ROBO EL SLOT LOL!!<br>
+							Y el mio lo movieron a los B-Sides... Bueno, el mundo es tan justo como esto.<br><br>
 
 							<audio controls>
 								<source src="audio/Facing_the_Opening_to_Hell.mp3", type="audio/mpeg">
