Arreglados en el blog RSS: Fechas, HTML en CDATA, etc.

--- a/html_modules/navbar.html
+++ b/html_modules/navbar.html
@@ -1,9 +1,9 @@
 <center class="Navbar">
 	<div id = "navbar_title_mobile">
-		<h1>urrova's website</h1>
+		<h1>URROVA's website</h1>
 	</div>
 	<div id="navbar_title_desktop">
-		<h1 id="navbar_title_main">urrova's website</h1>
+		<h1 id="navbar_title_main">URROVA's website</h1>
 		<!--p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p-->
 	</div>
 	<marquee id="Navbar_marquee">I DONT KNOW HOW TO PROGRAM</marquee>
@@ -26,6 +26,7 @@
 	<details class="Navbar_Buttons_Mobile">
 		<summary><p style="display:inline">Expand</p></summary>
 		<p><a href="index.html" target="_parent">Home</a></p>
+		<p><a href="blog.html" target="_parent">Blog</a></p>
 		<!-- <p><a href="vgames.html" target="_parent">Videogames</a></p> -->
 		<p><a href="mods.html" target="_parent">Mods</a></p>
 		<p><a href="music.html" target="_parent">Music</a></p>
