--- a/html_modules/navbar_es.html
+++ b/html_modules/navbar_es.html
@@ -1,9 +1,9 @@
 <center class="Navbar">
 	<div id = "navbar_title_mobile">
-		<h1>urrova's website</h1>
+		<h1>URROVA's website</h1>
 	</div>
 	<div id="navbar_title_desktop">
-		<h1 id="navbar_title_main">urrova's website</h1>
+		<h1 id="navbar_title_main">URROVA's website</h1>
 		<!--p id="navbar_linuxpath">guest@urrova:<span id="navbar_linuxpath_path">...</span></p-->
 	</div>
 	<marquee id="Navbar_marquee">NO SE PROGRAMAR</marquee>
@@ -26,6 +26,7 @@
 	<details class="Navbar_Buttons_Mobile">
 		<summary><p style="display:inline">Expandir</p></summary>
 		<p><a href="index_es.html" target="_parent">Inicio</a></p>
+		<p><a href="blog_es.html" target="_parent">Blog</a></p>
 		<!-- <p><a href="vgames_es.html" target="_parent">Videojuegos</a></p> -->
 		<p><a href="mods_es.html" target="_parent">Mods</a></p>
 		<p><a href="music_es.html" target="_parent">Musica</a></p>
