Actualizados los videos a youtube en la pantalla de Musica.

--- a/music_es.html
+++ b/music_es.html
@@ -112,18 +112,26 @@
 						<p>
 						<b>TNTEM</b> - 2021<br>
 						Era para un proyecto de doom, pero este midi es increiblemente touhou.<br><br>
-						<audio controls>
+						<div class="youtube-video-container">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/3p5V4Qwv7zM?si=GWpo7HqW8WsbJ1Dr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+						</div>
+						<br>
+						<!--audio controls>
 							<source src="audio/TNTEM.mp3", type="audio/mpeg">
-						</audio>
+						</audio-->
 						</p>
 					</li>
 					<li>
 						<p>
 						<b>The Chaotic Wars on Dis</b> - 2021<br>
 						Se supone que esta inspirado en un tema de black metal que no me acuerdo el nombre.<br><br>
-						<audio controls>
+						<div class="youtube-video-container">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/UvWbO92FuXI?si=sNI6_sc0_IIva5WG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+						</div>
+						<br>
+						<!--audio controls>
 							<source src="audio/The_Chaotic_Wars_on_Dis.mp3", type="audio/mpeg">
-						</audio>
+						</audio-->
 						</p>
 					</li>
 				</ul>
@@ -137,9 +145,13 @@
 							Este MIDI tiene una historia, porque iba a ser el tema ORIGINAL en los A-Sides de MAP30 peeeero... LUEGO LITERALMENTE LEE JACKSON ME ROBO EL SLOT LOL!!<br>
 							Y el mio lo movieron a los B-Sides... Bueno, el mundo es tan justo como esto.<br><br>
 
-							<audio controls>
+							<div class="youtube-video-container">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/FgaMbdUDTnU?si=wY0PUkQPka9yMEgB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+							</div>
+							<br>
+							<!--audio controls>
 								<source src="audio/Facing_the_Opening_to_Hell.mp3", type="audio/mpeg">
-							</audio>
+							</audio-->
 						</p>
 
 					</li>
@@ -148,9 +160,13 @@
 							<b>The Ultimate Evil</b> - 12/12/2023 <br>
 							(Sign of Evil del Doom + The Ultimate Challenge del Doom 2) <br><br>
 							
-							<audio controls>
+							<div class="youtube-video-container">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/JvKFsDbJdbE?si=ddNbaV43RQZn9Ie7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+							</div>
+							<br>
+							<!--audio controls>
 								<source src="audio/The_Ultimate_Evil.mp3", type="audio/mpeg">
-							</audio>
+							</audio-->
 						</p>
 					</li>
 					<li>
@@ -158,9 +174,13 @@
 							<b>(B-Side) House of Bones</b> - 09/04/2024 <br>
 							(Donna to the rescue del Doom + Bye Bye American Pie del Doom 2) <br><br>
 
-							<audio controls>
+							<div class="youtube-video-container">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/iDlxollJr6Q?si=bhIUxg84RCeIg4DG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+							</div>
+							<br>
+							<!--audio controls>
 								<source src="audio/House_of_Bones.mp3", type="audio/mpeg">
-							</audio>
+							</audio-->
 						</p>
 					</li>
 					<li>
@@ -168,9 +188,13 @@
 							<b>Run, Dave, Run!!</b> - 22/06/2024 <br>
 							(They're going to get you del Doom + The Dave D. Taylor Blues del Doom 2) <br><br>
 							
-							<audio controls>
+							<div class="youtube-video-container">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/x2ZnnYsGfHw?si=1KbRikp3ghqSWs--" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+							</div>
+							<br>
+							<!--audio controls>
 								<source src="audio/Run_Dave_Run.mp3", type="audio/mpeg">
-							</audio>
+							</audio-->
 						</p>
 					</li>
 				</ul>
