Añadido All My Homies Go To Mean Street

--- a/music.html
+++ b/music.html
@@ -91,7 +91,7 @@
 				<hr>
 
 				<h2>NEGATIVEONE</h2>
-				<ul>
+				<ul class="greenBG">
 					<li>
 						<p><b>Demonic Teleporter</b></p>
 						<p>
@@ -104,6 +104,7 @@
 								<iframe width="560" height="315" class="youtube_video" src="https://www.youtube-nocookie.com/embed/snYtBhmoQpQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 					</li>
+					<br>
 				</ul>
 
 				<h2>DOOM III: IDKFA</h2>
@@ -212,6 +213,24 @@
 					</li>
 				</ul>
 				
+
+				<br>
+
+				<h2>OUTLAND</h2>
+				<ul class="greenBG">
+					<li>
+						<p><b>All my Homies go to Mean Street</b></p>
+						<p>
+							
+							A MIDI i made for Johnny Cruelty/Grungo's project OUTLAND. Its a mashup between Oingo Boingo's Where Do All My Firends Go, and Van Halen's Mean Street.<br>
+							Then I got completely burned out AGAIN. I need to make stuff for OTHER games that AREN'T DOOM.<br>
+						</p>
+							<audio controls>
+								<source src="audio/All_my_Homies_go_to_Mean_Street.mp3", type="audio/mpeg">
+							</audio>
+					</li>
+					<br>
+				</ul>				
 
 				<br>
 			</details>
