--- a/music_es.html
+++ b/music_es.html
@@ -198,6 +198,22 @@
 						</p>
 					</li>
 				</ul>
+
+				<h2>OUTLAND</h2>
+				<ul class="greenBG">
+					<li>
+						<p><b>All my Homies go to Mean Street</b></p>
+						<p>
+							
+							Un MIDI que hice para OUTLAND, de Johnny Cruelty/Grungo's . Es un mashup entre Where Do All My Firends Go de Oingo Boingo, y Mean Street de Van Halen.<br>
+							Luego me canse completamente DE NUEVO. Necesito hacer cosas para OTROS juegos que NO SEAN DOOM.<br>
+						</p>
+							<audio controls>
+								<source src="audio/All_my_Homies_go_to_Mean_Street.mp3", type="audio/mpeg">
+							</audio>
+					</li>
+					<br>
+				</ul>		
 				
 				<br>
 			</details>
