--- a/aboutme.html
+++ b/aboutme.html
@@ -69,7 +69,9 @@
 					<b>GAMEDEV</b> <br>
 					Before i liked to program videgames, but i never finished any and when i finished anything nobody cared, so i went make
 					doom mods, and then i burned out. Now i dont have motivation or time or ideas to make a videogame.<br>
-					Before i used gamemaker, and now im studying godot, until the motivation or anything hits again or something.
+					Before i used gamemaker, <del>and now im studying godot, until the motivation or anything hits again or something.</del> <br>
+					<br>
+					Nah nevermind, life is too hard for this, i turned into a frustrated gamedev. Not thinking to return anytime soon.
 				</p>
 
 				<p>
