--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -71,8 +71,10 @@
 					<b>GAMEDEV</b> <br>
 					Antes me gustaba programar videojuegos, pero nunca termine nada y cuando si nadie me dio bola, y me fui a hacer
 					mods de doom, y luego me canse. Ahora no tengo motivacion ni tiempo ni ideas como para hacer un videojuego. <br>
-					Antes usaba GameMaker Studio 2; ahora estoy viendo de usar Godot. Viendo como se usa mientras espero a que me 
-					vuelva la motivacion y las ganas.
+					Antes usaba GameMaker Studio 2; <del>ahora estoy viendo de usar Godot. Viendo como se usa mientras espero a que me 
+					vuelva la motivacion y las ganas.</del> <br>
+					<br>
+					Na olvidense, la vida es demasiado dificil para esto. Me converti en un gamedev frustrado, no pienso volver proximamente.<br>
 				</p>
 
 				<p>
