--- a/index_es.html
+++ b/index_es.html
@@ -73,49 +73,52 @@
 			</div>
 			<br><hr><br>
 			
-			<h2>Links:</h2>
+			<h2>Tambien estoy en:</h2>
 			
-			<div class = "SocialNetIcon">
-				<a href="https://github.com/Urrova" title="Mi perfil de Github">
-					<i class="fab fa-github fa-10x SVGicon"></i>
-					<p>Github</p>
-				</a>
-			</div>
+			<article class="article_index">
+			<ul>
+				<li class = "">
+					<i class="fab fa-github fa SVGicon"></i> 
+					<a href="https://github.com/Urrova" title="My Github profile.">
+						Github
+					</a>
+				</li>
 
-			<div class = "SocialNetIcon">
-				<a href="https://www.doomworld.com/profile/29543-urrova/" title="Mi perfil de Doomworld">
-					<img src="images/doomworld_icon.png" class="DoomworldIcon">
-					<p>Doomworld</p>
-				</a>
-			</div>
-			
-			<div class = "SocialNetIcon">
-				<a href="https://urrova.itch.io/" title="Mi pagina de itch.io">
-					<i class="fab fa-itch-io fa-10x SVGicon"></i>
-					<p>Itch.io</p>
-				</a>
-			</div>
+				<li class = "">
+					<a href="https://www.doomworld.com/profile/29543-urrova/" title="My Doomworld profile.">
+						Doomworld
+					</a>
+				</li>
+				
+				<li class = "">
+					<i class="fab fa-itch-io fa SVGicon"></i> 
+					<a href="https://urrova.itch.io/" title="My itch.io page.">
+						itch.io
+					</a>
+				</li>
 
-			<div class = "SocialNetIcon">
-				<a href="https://www.youtube.com/channel/UCWTkJdOQ96_MjLmMmYBEmXw" title="Mi canal de youtube (video cada 2 años)">
-					<i class="fab fa-youtube fa-10x SVGicon"></i>
-					<p>Youtube</p>
-				</a>
-			</div>
+				<li class = "">
+					<i class="fab fa-youtube fa SVGicon"></i> 
+					<a href="https://www.youtube.com/channel/UCWTkJdOQ96_MjLmMmYBEmXw" title="My youtube channel (video each two years)">
+						Youtube
+					</a>
+				</li>
 
-			<div class = "SocialNetIcon">
-				<a href="https://on.soundcloud.com/iZZQd" title="My soundcloud account.">
-					<i class="fa-brands fa-soundcloud fa-10x SVGicon"></i>
-					<p>Soundcloud</p>
-				</a>
-			</div>
+				<li class = "">
+					<i class="fa-brands fa-bluesky fa SVGicon"></i> 
+					<a href="https://bsky.app/profile/urrova.bsky.social" title="My bluesky account.">
+						Bluesky
+					</a>
+				</li>
 
-			<div class = "SocialNetIcon">
-				<a href="https://twitter.com/_Urrova_" title="My twitter account.">
-					<i class="fa-brands fa-twitter fa-10x SVGicon"></i>
-					<p>Twitter (muerto)</p>
-				</a>
-			</div>
+				<li class = "">
+					<i class="fa-brands fa-soundcloud fa SVGicon"></i> 
+					<a href="https://on.soundcloud.com/iZZQd" title="My soundcloud account.">
+						Soundcloud (muerto)
+					</a>
+				</li>
+			</ul>
+			</article>
 			
 			<br>
 
