homies de mean street a youtube.

--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>URROVA:/music_es</title>
+		<title>URROVA:/music</title>
 		<link rel="stylesheet" href="styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="idioma" content="ingles">
@@ -225,9 +225,11 @@
 							A MIDI i made for Johnny Cruelty/Grungo's project OUTLAND. Its a mashup between Oingo Boingo's Where Do All My Firends Go, and Van Halen's Mean Street.<br>
 							Then I got completely burned out AGAIN. I need to make stuff for OTHER games that AREN'T DOOM.<br>
 						</p>
-							<audio controls>
-								<source src="audio/All_my_Homies_go_to_Mean_Street.mp3", type="audio/mpeg">
-							</audio>
+
+						<div class="youtube-video-container">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/vz_9HG9Vcpk?si=thUVpFyNO37xUwQ7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+						</div>
+
 					</li>
 					<br>
 				</ul>				
