--- a/music_es.html
+++ b/music_es.html
@@ -203,14 +203,14 @@
 				<ul class="greenBG">
 					<li>
 						<p><b>All my Homies go to Mean Street</b></p>
-						<p>
-							
+						<p>z
 							Un MIDI que hice para OUTLAND, de Johnny Cruelty/Grungo's . Es un mashup entre Where Do All My Firends Go de Oingo Boingo, y Mean Street de Van Halen.<br>
 							Luego me canse completamente DE NUEVO. Necesito hacer cosas para OTROS juegos que NO SEAN DOOM.<br>
 						</p>
-							<audio controls>
-								<source src="audio/All_my_Homies_go_to_Mean_Street.mp3", type="audio/mpeg">
-							</audio>
+
+						<div class="youtube-video-container">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/vz_9HG9Vcpk?si=thUVpFyNO37xUwQ7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+						</div>
 					</li>
 					<br>
 				</ul>		
