Agregado Nitroglicerin Powered

--- a/index.html
+++ b/index.html
@@ -82,12 +82,6 @@
 						Github
 					</a>
 				</li>
-
-				<li class = "">
-					<a href="https://www.doomworld.com/profile/29543-urrova/" title="My Doomworld profile.">
-						Doomworld
-					</a>
-				</li>
 				
 				<li class = "">
 					<i class="fab fa-itch-io fa SVGicon"></i> 
@@ -114,6 +108,12 @@
 					<i class="fa-brands fa-soundcloud fa SVGicon"></i> 
 					<a href="https://on.soundcloud.com/iZZQd" title="My soundcloud account.">
 						Soundcloud (dead)
+					</a>
+				</li>
+
+				<li class = "">
+					<a href="https://www.doomworld.com/profile/29543-urrova/" title="My Doomworld profile.">
+						Doomworld (dead)
 					</a>
 				</li>
 			</ul>
