--- a/index_es.html
+++ b/index_es.html
@@ -83,12 +83,6 @@
 						Github
 					</a>
 				</li>
-
-				<li class = "">
-					<a href="https://www.doomworld.com/profile/29543-urrova/" title="My Doomworld profile.">
-						Doomworld
-					</a>
-				</li>
 				
 				<li class = "">
 					<i class="fab fa-itch-io fa SVGicon"></i> 
@@ -115,6 +109,12 @@
 					<i class="fa-brands fa-soundcloud fa SVGicon"></i> 
 					<a href="https://on.soundcloud.com/iZZQd" title="My soundcloud account.">
 						Soundcloud (muerto)
+					</a>
+				</li>
+
+				<li class = "">
+					<a href="https://www.doomworld.com/profile/29543-urrova/" title="My Doomworld profile.">
+						Doomworld (muerto)
 					</a>
 				</li>
 			</ul>
