--- a/music.html
+++ b/music.html
@@ -236,6 +236,25 @@
 
 				<br>
 			</details>
+
+			<details class="details_article">
+				<summary><h2 class="displayInline">Misc.</h2></summary>
+
+				<p>
+					Random music i made for fun.
+				</p>
+
+				<h3>Nitroglicerin Powered - 6/1/2026</h3>
+
+				<audio controls>
+					<source src="audio/Nitroglicerin_Powered.mp3", type="audio/mpeg">
+				</audio>
+
+				<p>
+					In a complete burnout of absoultly everything, i made this theme on a Nintendo DS Lite from 2006, trying to shake off the burnout and creative block.
+				</p>
+
+			</details>
 			
 			<br>
 
