--- a/music_es.html
+++ b/music_es.html
@@ -225,7 +225,7 @@
 					Esta es musica completamente random que hice por diversion, sin ningun proyecto o direccion en la mente.
 				</p>
 
-				<h3>Pizza y Pasta en Italia</h3>
+				<h3>Pizza y Pasta en Italia - 2025</h3>
 
 				<audio controls>
 					<source src="audio/Pizza_y_Pasta_en_Italia.mp3", type="audio/mpeg">
@@ -234,6 +234,17 @@
 				<p>
 					Un tema que hice para hacer algo con OpenUTAU usando el patch de Kasane Teto, y salio esta huevada (italianos por favor no me peguen).
 				</p>
+
+				<h3>Nitroglicerin Powered - 6/1/2026</h3>
+
+				<audio controls>
+					<source src="audio/Nitroglicerin_Powered.mp3", type="audio/mpeg">
+				</audio>
+
+				<p>
+					En medio de un completo burnout de absolutamente todo, hice este tema en un Nintendo DS Lite del 2006, a ver si puedo sacarme el burnout.
+				</p>
+
 			</details>
 
 			<br>
